            - Routines lst(), lens(), augTriSolidTorus() and sfsOverSphere()
              now check their preconditions and throw an exception if they fail.
            - Renamed cuspedGenusTwoTorus() to idealGenusTwoHandlebody().
              The old name has been kept as a deprecated alias.
        Class Example<4>:
            - New routine fourTorus(), thanks to Rhuaidi Burke.
        Class ExampleLink:
            - New routine chen().
            - New routines virtualTrefoil(), kishino(), and gpv().
            - Added several new routines that return 3-dimensional embeddings
              of links (i.e., SpatialLink objects).
        Class Face<dim, 1>, FaceNumbering<dim, 1>:
            - New static routine faceNumber(u, v) to return the edge number in
              a simplex spanned by vertices u and v.  This is implemented in
              FaceNumbering<dim, 1> and is also accessible to Face<dim, 1>.
            - New routine Face<dim, 1>::isLoop().
        Class Face<dim, 2>:
            - Triangle<3>::Type is deprecated, and is now an alias for the new
              global type TriangleType.  Moreover, this is now a scoped
              enumeration for better type safety.  The old enum constants
              (e.g., Triangle<3>::CONE) are likewise now deprecated aliases for
              the new scoped enum values (e.g., TriangleType::Cone).
            - The 3-D routines Triangle<3>::type(), Triangle<3>::subtype(),
              isMobiusBand() and isCone() have been renamed to triangleType(),
              triangleSubtype(), formsMobiusBand() and formsCone(), and
              are now available for triangles within triangulations of any
              dimension ≥ 3.  The old 3-D routines are now deprecated.
        Class Face<dim, dim-1>:
            - New routine join().
            - New routines lock(), unlock(), and isLocked().
        Class FacePair:
            - Added a spaceship operator (<=>) for comparisons.
        Class FacetPairing<dim>: