@@ -28,6 +28,45 @@ constructions.)doc";
 
 namespace Example_ {
 
+// Docstring regina::python::doc::Example_::boundarySpin
+static const char *boundarySpin =
+R"doc(Returns a triangulation of the given 3-manifold spun around its
+boundary.
+
+Let ``M`` be the given 3-manifold, with real boundary ``∂M``. This
+constructs a 4-manifold from ``M`` as follows:
+
+* First we build the product ``M × S1``.
+
+* Then, for each point ``b`` on the real boundary ``∂M``, we collapse
+  the fibre ``b × S1`` to a single point. (Equivalently, we attach a
+  copy of ``∂M × D2`` to the product ``M × S1`` so that, for each
+  point ``b`` on the boundary ``∂M``, the fibre ``b × S1`` becomes the
+  boundary of the corresponding disc ``b × D2``.)
+
+The second step only acts on real boundary; that is, points ``b`` that
+lie on boundary triangles of ``M``. It ignores ideal boundary, in the
+sense that ideal vertices will just be transformed as part of the
+product ``M × S1`` (the first step), without the subsequent
+collapse/filling operation (the second step). This means that any
+ideal vertices of ``M`` will become invalid edges of the resulting
+4-maifold triangulation.
+
+The product will contain 82 pentachora for each original tetrahedron
+of *M*, and will contain many internal vertices. It is highly
+recommended that you call Triangulation<4>::simplify() afterwards if
+you do not need to preserve the combinatorial structure.
+
+Note that the current construction does _not_ give an oriented
+triangulation (due to the specific choice of labelling); this may
+change in a future version of Regina.
+
+Parameter ``base``:
+    the 3-manifold triangulation *M*, as described above.
+
+Returns:
+    the 4-manifold obtained by spinning *M* around its boundary.)doc";
+
 // Docstring regina::python::doc::Example_::bundleWithMonodromy
 static const char *bundleWithMonodromy =
 R"doc(Returns a bundle formed from a given 3-manifold and a given monodromy.
